# mtt-rs

./: Cargo.toml  LICENSE  README.md
layout/: Config.toml
resources/: Config.toml  init_mysql.sql
src/: main.rs
src/conf/: mod.rs
src/controller/: admin.rs  competition.rs  index.rs  mod.rs  router.rs  user.rs
src/driver/: cache.rs  db.rs  mod.rs
src/model/: competition.rs  mod.rs  user.rs
