[package]
name = "mtt"
version = "0.1.0"
edition = "2021"
authors = ["Predmet Chen"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.14"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "mysql", "postgres", "sqlite", "any" ] }
clap = { version = "3.0.0-rc.4", features = ["derive"] }
fern = "0.5"
log = "0.4"
toml = "0.5.8"
serde = { version = "1.0", features = [ "derive" ] }
chrono = "0.4.19"